--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,22 @@ img {
     
 }
     
+.period {
+    color: grey;
+    font-size: 1rem;
+    
+}
+
+.diet {
+    color: grey;
+    font-size: 1rem;
+}
+
+.length {
+    color: grey;
+    font-size: 1rem;
+}
+
 
 
 
