--- a/css/main.css
+++ b/css/main.css
@@ -30,12 +30,13 @@ img {
   width: 100%;
 }
 
-.stegopicture {
+.stegographic {
     width: auto;
     margin: 0;
+    position: relative;
 }
 
-.stegofact {
+.stegographic-caption {
     margin: -4.25rem 0 0 0;
     padding: 1rem;
     color: white;
@@ -43,7 +44,9 @@ img {
     font-style: italic;
     font-size: .75rem;
     position: absolute;
+    bottom: 0;
     background-color: rgba(0, 0, 0, .25);
+    
 }
 
 .stegotitle {
@@ -55,18 +58,15 @@ img {
     
 }
     
-.period {
+.info {
     color: grey;
     font-size: 1rem;
-    
+    float: left;
+    padding: 1rem;
+    width: 33.3333%;
+    border-right: 1px solid;
 }
 
-.diet {
-    color: grey;
-    font-size: 1rem;
-}
-
-.length {
-    color: grey;
-    font-size: 1rem;
+.info:last-child {
+    border: 0;
 }
